<resources>
    <string name="app_name">Be My Voice</string>
    <string name="app_description">Pakistan Sign Language Interpreter App</string>
    <string name="textToSign">Text To Sign</string>
    <string name="signToText">Sign To Text</string>
    <string name="EnterTextHere">Enter Text Here</string>
    <string name="GetVideo">Get Video</string>
    <string name="confirmExit">Confirm Exit?</string>
    <string name="exitText">Are you sure you Want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="aboutUs">About Us</string>
    <string name="connect">Be My Voice</string>
    <string name="PSL">PSL</string>
    <string name="homePage">Home</string>
    <string name="aboutPSLHistory">What is PSL?</string>
    <string name="aboutPSL">The native language of Pakistan’s Deaf community is Pakistan Sign Language (PSL). Similar to spoken languages, PSL has a variety of dialects in different regions of the country. While many common words are shared, some will be regional-specific. Deaf educators and leaders nationwide have reviewed our PSL Dictionary, and we will continue to update words and signs in order to fully document PSL usage nationwide.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_slider_adapter">SliderAdapter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>