<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/off_white">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/app_font_bold"
        android:letterSpacing=".03"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/app_font_regular"
        android:text="@string/exitText"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <Button
            android:id="@+id/acceptDialogBtn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:backgroundTint="#E57373"
            android:fontFamily="@font/app_font_medium"
            android:text="@string/yes"
            android:textAllCaps="false"
            app:cornerRadius="10dp"
            app:rippleColor="#BDBDBD" />

        <Button
            android:id="@+id/rejectDialogBtn"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:textAllCaps="false"
            app:backgroundTint="@color/light_blue"
            app:cornerRadius="10dp"
            app:rippleColor="#BDBDBD" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>