<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomNavParentLayout"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_gravity="bottom"
    app:cardCornerRadius="35dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd= "15dp"
        android:layout_marginBottom="4dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/bottomItem1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_bar_selected_item_bk"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ico1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/about_us"
                app:tint="@color/light_blue" />

            <TextView
                android:id="@+id/title1"
                android:text="@string/aboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/urbanist_extra_bold"
                android:textColor="@color/white"
                android:textSize="11sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomItem2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ico2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/conect"
                app:tint="@color/light_blue" />

            <TextView
                android:id="@+id/title2"
                android:visibility="gone"
                android:text="@string/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/urbanist_extra_bold"
                android:textColor="@color/white"
                android:textSize="11sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomItem3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ico3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/link"
                app:tint="@color/light_blue" />

            <TextView
                android:id="@+id/title3"
                android:text="@string/PSL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/urbanist_extra_bold"
                android:textColor="@color/white"
                android:textSize="11sp"
                tools:ignore="SmallSp"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>